--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -25,7 +25,7 @@ jobs:
           npm run build
       - uses: actions/upload-artifact@v4
         with:
-          name: webpack artifcats
+          name: webpack artifacts
           path: public/
 
   Build-Docker-Image:
